test/libsolidity/syntaxTests/inheritance/override/state_variable_function.sol
contract A {
	uint public x;
}
contract C is A {
	function x() public returns (uint);
}
// ----
// DeclarationError: (50-85): Identifier already declared.
